--- a/scripts/generate/api-template.hbs
+++ b/scripts/generate/api-template.hbs
@@ -2,7 +2,7 @@
 {{!-- このファイルは自動生成されます。直接編集しないでください。 --}}
 type UserSession = any;
 
-import { getSessionRole } from '@/app/lib/auth';
+import { getSessionRole } from '@/lib/auth';
 
 {{#each tables}}
 {{#if table.name}}
